Fixing nav bar expand button on mobile devices

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -44,3 +44,6 @@ html {
 .navbar-nav li a:hover {
     color: #E972B6;
 }
+.icon-bar {
+    background-color: white;
+}
